<resources>
    <string name="app_name">Нестарица</string>
    <string name="splash_fragment">Нестарица</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="PROFILE">Профиль</string>
    <string name="ORDERS">Заказы</string>
    <string name="MAIN">Главная</string>
    <string name="ORDER">Заказ</string>
    <string name="SHARE">Поделиться</string>
    <string name="CONTACT_US">Связаться с нами</string>
    <string name="ABOUT_US">О нас</string>
    <string name="COMMUNICATE_HEADER">Контакты</string>

    <string name="AUTH_SCREEN">Экран авторизации</string>
    <string name="AUTH_GREETING_TEXT">Привет!</string>
    <string name="AUTH_REGISTRATION_BUTTON_TEXT">Войти</string>
    <string name="NAME_FIELD_SHOULD_BE_FILLED_TEXT">Поле с именем должно быть заполнено</string>
    <string name="PHONE_FIELD_SHOULD_BE_FILLED_TEXT">Поле с телефоном должно быть заполнено</string>

    <string name="CREATE_NEW_ORDER">Создать новый заказ</string>

    <string name="NEW_ORDER_MAKE_ORDER_BUTTON_TEXT">Заказать</string>
    <string name="NEW_ORDER_COMMENT_TEXT">Комментарий</string>

    <string name="PROFILE_USER_INFO_HEADER">Данные пользователя</string>
    <string name="PROFILE_NAME_HINT">Имя</string>
    <string name="PROFILE_EMAIL_HINT">Почта</string>
    <string name="PROFILE_PHONE_NUMBER_HINT">Телефон</string>
    <string name="PROFILE_ADDRESS_DELIVERY_HEADER">Адрес доставки</string>
    <string name="PROFILE_STREET_HINT">Улица</string>
    <string name="PROFILE_BUILDING_NUMBER_HINT">Дом</string>
    <string name="PROFILE_FLOOR_NUMBER_HINT">Этаж</string>
    <string name="PROFILE_APARTMENT_NUMBER_HINT">Кв/офис</string>
    <string name="PROFILE_PAYMENT_METHOD_HEADER">Способ оплаты</string>
    <string name="SAVE_BUTTON_TEXT">Сохранить</string>
    <string name="LOGOUT">Выход</string>
    <string name="DATA_SAVED_TOAST_MESSAGE">Ваши данные сохранены</string>

    <string name="BOTTOM_SHEET_ADDRESS_LIST_HEADER">Мои адреса</string>
    <string name="BOTTOM_SHEET_ADDRESS_LIST_CONFIRM_BUTTON">Готово</string>

    <string name="ORDERS_EMPTY_LIST_TEXT">У вас пока не было заказов</string>
    <string name="ORDERS_ADDRESS_DELIVERY_TEXT">ул. %1$s, д.%2$s, кв.%3$s,эт.%4$s</string>
    <string name="ORDERS_BOTTLE_QTY_TEXT">%1$d бут.</string>
    <string name="ORDERS_TOTAL_PRICE_TEXT">%1$d ₽</string>

    <string name="GRATITUDE_UPPER_TEXT">Спасибо!</string>
    <string name="GRATITUDE_LOWER_TEXT">Ваш заказ успешно создан!</string>
    <string name="GRATITUDE_CONTINUE_BUTTON_TEXT">До встречи!</string>
    <string name="bottled_water">Бутилированная вода</string>
    <string name="bottle_18_9L">Бутыль 18,9 л</string>
    <string name="minus_button">-</string>
    <string name="plus_button">+</string>
    <string name="return_bottle">Возврат тары</string>

    <string name="HISTORY_ORDER">Заказ из истории</string>
    <string name="MOVE_TO_ORDER">Перейти к заказу</string>
    <string name="today">Сегодня</string>
    <string name="tomorrow">Завтра</string>
    <string name="morning_9_12">9–12</string>
    <string name="noon_12_15">12–15</string>
    <string name="afternoon_15_18">15–18</string>
    <string name="evening_18_21">18–21</string>

    <string name="dialog_btn_ok">OK</string>
    <string name="dialog_btn_cancel">Cancel</string>
    <string name="dialog_btn_yes">Yes</string>
    <string name="dialog_btn_no">No</string>

    <string name="default_error_title">Error</string>
    <string name="exception_unknown_error">Unknown error</string>
    <string name="connection_exception">Please, check the Internet connection</string>
    <string name="code_error">Something goes wrong. The error code: %d</string>

    <string name="delivery_address">Адрес доставки</string>
</resources>