<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/profileFragment"
            android:icon="@drawable/ic_profile"
            android:title="@string/PROFILE" />
        <item
            android:id="@+id/allOrdersFragment"
            android:icon="@drawable/ic_orders_history"
            android:title="@string/ORDERS" />
    </group>

    <item android:title="@string/COMMUNICATE_HEADER">
        <menu>
            <item
                android:id="@+id/share"
                android:icon="@drawable/ic_share"
                android:title="@string/SHARE" />
            <item
                android:id="@+id/contact_us"
                android:icon="@drawable/ic_contact_us"
                android:title="@string/CONTACT_US" />
            <item
                android:id="@+id/aboutUsFragment"
                android:icon="@drawable/ic_about_us"
                android:title="@string/ABOUT_US" />
        </menu>
    </item>
</menu>