<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:layout_marginHorizontal="12dp"
    android:layout_marginVertical="8dp"
    app:cardCornerRadius="10dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/PROFILE_NAME_HINT"
            android:maxLines="1"
            android:textSize="16sp"
            app:errorEnabled="true" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addressField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/PROFILE_ADDRESS_DELIVERY_HEADER"
            android:maxLines="1"
            android:textSize="16sp"
            app:errorEnabled="true">

        </com.google.android.material.textfield.TextInputEditText>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneNumberField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/PROFILE_PHONE_NUMBER_HINT"
            android:maxLines="1"
            android:textSize="16sp"
            app:errorEnabled="true">

        </com.google.android.material.textfield.TextInputEditText>

    </androidx.appcompat.widget.LinearLayoutCompat>

</com.google.android.material.card.MaterialCardView>