<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    tools:context=".presentation.main.history.GratitudeScreenFragment">

    <ImageView
        android:id="@+id/whiteCircle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:src="@drawable/ic_order_created"
        app:layout_constraintBottom_toTopOf="@id/gratitudeText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_icon_order_created_check"
        app:layout_constraintBottom_toBottomOf="@id/whiteCircle"
        app:layout_constraintEnd_toEndOf="@id/whiteCircle"
        app:layout_constraintStart_toStartOf="@id/whiteCircle"
        app:layout_constraintTop_toTopOf="@id/whiteCircle" />

    <TextView
        android:id="@+id/gratitudeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/GRATITUDE_UPPER_TEXT"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/orderCreatedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/GRATITUDE_LOWER_TEXT"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gratitudeText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/continueBtn"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/registration_button"
        android:backgroundTint="@color/white"
        android:text="@string/GRATITUDE_CONTINUE_BUTTON_TEXT"
        android:textAllCaps="false"
        android:textColor="@color/primary_color"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>