<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="8dp"
    android:backgroundTint="@android:color/transparent"
    app:cardCornerRadius="10dp"
    app:cardElevation="0dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/delivery_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/streetField"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:textColorHint="#959494"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="28dp"
            app:boxCornerRadiusBottomStart="28dp"
            app:boxCornerRadiusTopEnd="28dp"
            app:boxCornerRadiusTopStart="28dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/street"
                style="@style/EditTextViewPrimary"
                android:hint="@string/PROFILE_STREET_HINT" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/headers_vertical_margin">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/buildingNumberField"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginEnd="5dp"
                android:textColorHint="#959494"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="28dp"
                app:boxCornerRadiusBottomStart="28dp"
                app:boxCornerRadiusTopEnd="28dp"
                app:boxCornerRadiusTopStart="28dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:errorEnabled="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/floorNumberField"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/buildingNumber"
                    style="@style/EditTextViewPrimary"
                    android:hint="@string/PROFILE_BUILDING_NUMBER_HINT" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/floorNumberField"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:textColorHint="#959494"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="28dp"
                app:boxCornerRadiusBottomStart="28dp"
                app:boxCornerRadiusTopEnd="28dp"
                app:boxCornerRadiusTopStart="28dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:errorEnabled="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/apartmentNumberField"
                app:layout_constraintStart_toEndOf="@id/buildingNumberField"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/floorNumber"
                    style="@style/EditTextViewPrimary"
                    android:hint="@string/PROFILE_FLOOR_NUMBER_HINT" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/apartmentNumberField"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginStart="5dp"
                android:textColorHint="#959494"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="28dp"
                app:boxCornerRadiusBottomStart="28dp"
                app:boxCornerRadiusTopEnd="28dp"
                app:boxCornerRadiusTopStart="28dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:errorEnabled="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/floorNumberField"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/apartmentNumber"
                    style="@style/EditTextViewPrimary"
                    android:hint="@string/PROFILE_APARTMENT_NUMBER_HINT" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

</com.google.android.material.card.MaterialCardView>