<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginVertical="8dp"
    app:cardCornerRadius="28dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/order_icon_full_bottle"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_full_bottle_gal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/bottled_water" />

            <LinearLayout
                android:id="@+id/order_full_bottle_description"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginStart="15dp"
                app:layout_constraintStart_toEndOf="@+id/order_icon_full_bottle"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:id="@+id/title_full_bottle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bottled_water"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/subtitle_full_bottle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bottle_18_9L"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/price_full_bottle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:text="360 ₽" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="@+id/order_full_bottle_description"
                app:layout_constraintEnd_toEndOf="parent">

                <Button
                    android:id="@+id/minus_full_bottle_button"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/round_button"
                    android:padding="0dp"
                    android:text="@string/minus_button"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/qty_full_bottle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    tools:text="0"
                    android:textColor="@color/black"
                    android:textSize="20sp"/>

                <Button
                    android:id="@+id/plus_full_bottle_button"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/round_button"
                    android:padding="0dp"
                    android:text="@string/plus_button"
                    android:textColor="@color/white"
                    android:textSize="12sp"/>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/order_icon_empty_bottle"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_empty_bottle_gal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/return_bottle" />

            <LinearLayout
                android:id="@+id/order_empty_bottle_description"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:orientation="vertical"
                app:layout_constraintStart_toEndOf="@+id/order_icon_empty_bottle"
                app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                    android:id="@+id/subtitle_empty_bottle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="4dp"
                    android:text="@string/return_bottle"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/price_empty_bottle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="0 ₽"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="@+id/order_empty_bottle_description"
                app:layout_constraintEnd_toEndOf="parent">

                <Button
                    android:id="@+id/minus_empty_bottle_button"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/round_button"
                    android:padding="0dp"
                    android:text="@string/minus_button"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/qty_empty_bottle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    tools:text="0"
                    android:textColor="@color/black"
                    android:textSize="20sp"/>

                <Button
                    android:id="@+id/plus_empty_bottle_button"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/round_button"
                    android:padding="0dp"
                    android:text="@string/plus_button"
                    android:textColor="@color/white"
                    android:textSize="12sp"/>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

</com.google.android.material.card.MaterialCardView>